# GameOfLife-SDL

./: .gitignore  CMakeLists.txt  GameOfLife.sln  GameOfLife.vcxproj  GameOfLife.vcxproj.filters  LICENSE  README.md  Source.cpp  main.cpp
Src/: GameOfLife.cpp  GameOfLife.h  Graphics.cpp  Graphics.h
